tests/keyvalue/keyvalue.exp
Error -------------------------------------------------------------------------------------------------- keyvalue.js:3:6

Cannot cast `x[""]` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   keyvalue.js:3:6
   3|     (x[""]: number);
           ^^^^^

References:
   keyvalue.js:2:32
   2|   function(x: { [key: number]: string }) {
                                     ^^^^^^ [1]
   keyvalue.js:3:13
   3|     (x[""]: number);
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- keyvalue.js:3:6

empty string [1] is incompatible with number [2]. [incompatible-type]

   keyvalue.js:3:6
   3|     (x[""]: number);
           ^^^^^ [1]

References:
   keyvalue.js:2:23
   2|   function(x: { [key: number]: string }) {
                            ^^^^^^ [2]



Found 2 errors
